# HidraSim

./: .asetup.save  .gitignore  CMakeLists.txt  GNUmakefile  HidraSim.cc  HidraSim_run.mac  HidraSim_runscan.mac  HidraSim_test.cc  README.md  sourcegeant.sh
DREMTubes_build/: CMakeCache.txt  DREMTubes  DREMTubes_run.mac  DREMTubes_run6.mac  DREMTubes_runscan.mac  DREMTubes_runscan_kaon.mac  Makefile  cmake_install.cmake  install_manifest.txt  out
analysis/: .asetup.save  ConvertToPhysics.sh  DataMcComparison.py  HidraAna.C  HidraConfig.h  HidraGeo.h  SimToPhysicsConverter.C  hidra100_HidraSimout_mu100GeV_90degHorz.root  hidra200_HidraSimout_mu200GeV_90degHorz.root  hidra20_HidraSimout_Run0.root  hidra20_HidraSimout_mu20GeV_90degHorz.root  hidra40_HidraSimout_Run0.root  hidra40_HidraSimout_pi40GeV_90degHorz.root  physics_HidraSimout_Run0  physics_HidraSimout_Run0.root  run.sh
analysis/backu/: hidra20_HidraSimout_Run0.root  hidra20_HidraSimout_Run1.root  hidra20_HidraSimout_Run2.root
analysis/output_electrons_PShowerIn_EnergyScan_2p5Horz_2p5Vert/: hidra100_HidraSimout_Run6.root  hidra10_HidraSimout_Run0.root  hidra20_HidraSimout_Run1.root  hidra30_HidraSimout_Run2.root  (+10 more)
include/: DREMTubesCalorimeterHit.hh  DREMTubesCalorimeterSD.hh  DREMTubesDetectorConstruction.hh  DREMTubesEventAction.hh  DREMTubesGeoPar.hh  DREMTubesGeoPar_original.hh  HidraSimActionInitialization.hh  HidraSimCalorimeterHit.hh  HidraSimCalorimeterSD.hh  HidraSimDetectorConstruction.hh  HidraSimEventAction.hh  HidraSimGeoMessenger.hh  HidraSimGeoPar.hh  HidraSimOpticalPhysics.hh  HidraSimPhysicsList.hh  HidraSimPrimaryGeneratorAction.hh  HidraSimRunAction.hh  HidraSimSignalHelper.hh  HidraSimSteppingAction.hh
scripts/: DREMTubes_lxplus_10.7.p01.sh  HidraSim_HTCondor.sub  HidraSim_HTCondor_10.7.p03.sh  HidraSim_HTCondor_11.sh  HidraSim_run.mac  HidraSim_runMuons.mac
src/: DREMTubesCalorimeterHit.cc  DREMTubesCalorimeterSD.cc  DREMTubesDetectorConstruction.cc  DREMTubesEventAction.cc  DREMTubesRunAction.cc  DREMTubesSteppingAction.cc  HidraSimActionInitialization.cc  HidraSimCalorimeterHit.cc  HidraSimCalorimeterSD.cc  HidraSimDetectorConstruction.cc  HidraSimEventAction.cc  HidraSimOpticalPhysics.cc  HidraSimPhysicsList.cc  HidraSimPrimaryGeneratorAction.cc  HidraSimRunAction.cc  HidraSimSignalHelper.cc  HidraSimSteppingAction.cc
